--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <title>DSMovie App</title>
   </head>
   <body>
-    <noscript>Você precisa habilitar o javascript para este app.</noscript>
+    <noscript>Precisa habilitar o javascript para este app.</noscript>
     <div id="root"></div>
   </body>
 </html>
